[#14993] Remove 11.0 deprecations: MemoryConfiguration